--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 
+:root {
+  --primary-color: #047AED;
+  --ghost-white: #FBFBFF;
+  --gray-one: #333;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,17 +14,13 @@
 
 body {
   font-family: "Lato", sans-serif;
-  color: #333;
+  color: var(--gray-one);
   line-height: 1.6;
 
 }
 
-.nav-menu {
-  list-style-type: none;
-}
-
 a {
-  color: #333;
+  color: var(--gray-one);
   text-decoration: inherit;
 }
 
@@ -36,13 +38,129 @@ img {
   width: 100%;
 }
 
+
+/* Navbar */
 .wrapper {
   height: 70px;
-  background-color: #047AED;
-  color: #FBFBFF;
+  background-color: var(--primary-color);
+  color: var(--ghost-white);
 
 }
 
+.wrapper .flex {
+  justify-content: space-between;
+}
+
+.nav-menu {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-item a {
+  color: var(--ghost-white);
+  padding: 10px;
+  font-size: 1.1rem;
+  margin-left: 2rem;
+}
+
+.nav-item a:hover {
+  border-bottom: 3px solid var(--ghost-white);
+}
+
+/* Showcase section */
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: var(--ghost-white);
+  position: relative;
+}
+
+.showcase .grid {
+  overflow: visible;
+  grid-template-columns: 55% 45%;
+  gap: 30px;
+}
+
+.showcase::before,
+.showcase::after {
+  content: '';
+  position: absolute;
+  height: 100px;
+  bottom: -70px;
+  right: 0;
+  left: 0;
+  transform: skewY(-3deg);
+  -webkit-transform: skewY(-3deg);
+  -ms-transform: skewY(-3deg);
+  -moz-transform: skewY(-3deg);
+  background: var(--ghost-white);
+}
+
+.showcase h1 {
+  font-size: 2.4rem;
+}
+.showcase h1 span {
+  font-weight: 400;
+}
+.showcase p {
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 2.5rem;
+  margin: 20px 0;
+}
+
+.card {
+  background-color: var(--ghost-white);
+  border-radius: 10px;
+  box-shadow: 3px 10px rgba(0, 0, 0, 0.2);
+  color: var(--gray-one);
+  padding: 20px; 
+  margin: 10px;
+}
+
+.showcase-form {
+  position: relative;
+  top: 4rem;
+  height: 350px;
+  width: 400px;
+  padding: 40px;
+  z-index: 100;
+  justify-self: flex-end;
+}
+
+.showcase-form .form-control {
+  margin: 1.6rem 0;
+}
+
+.showcase-form input[type="text"], 
+.showcase-form input[type="email"] {
+  border: 0;
+  border-bottom: 0.1rem solid #B4BECB;
+  width: 100%;
+  padding: 3px;
+  font-size: 1rem;  
+} 
+
+.btn {
+  display: inline-block;
+  padding: 10px 30px;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: var(--ghost-white);
+  border: none;
+  border-radius: 5px;
+}
+
+.btn-outline {  
+  background-color: transparent;
+  border: 1px solid var(--ghost-white);
+}
+
+.showcase-form input:focus {
+  outline: none;
+}
+
+/* Utils */
 .container {
   max-width: 1100px;
   margin: 0 auto;
@@ -50,28 +168,18 @@ img {
   padding: 0 40px;
 }
 
-.logo span {
-  font-weight: 400;
-}
-
 .flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 100%;
 }
 
-.nav-menu {
-  display: flex;
-}
-
-.nav-item a {
-  color: #FFF;
-  padding: 10px;
-  font-size: 1.2rem;
-  margin-left: 2rem;
-}
-
-.nav-item a:hover {
-  border-bottom: 3px solid #FFF;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
