--- a/styles/global.css
+++ b/styles/global.css
@@ -44,7 +44,6 @@ img {
   height: 70px;
   background-color: var(--primary-color);
   color: var(--ghost-white);
-
 }
 
 .wrapper .flex {
@@ -151,6 +150,10 @@ img {
   border-radius: 5px;
 }
 
+.btn a:hover {
+  scale: 1;
+}
+
 .btn-outline {  
   background-color: transparent;
   border: 1px solid var(--ghost-white);
@@ -160,26 +163,25 @@ img {
   outline: none;
 }
 
-/* Utils */
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  overflow: auto;
-  padding: 0 40px;
+/* Stats */
+.stats {
+  padding-top: 100px;
+  background-color:  var(--ghost-white);
 }
 
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+.stats-heading {
+  max-width: 500px;
+  margin: auto;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
+.stats .grid h3 {
+  font-size: 25px;
+  color: var(--primary-color);
+  margin-top: 1rem;
+}
+
+
+.stats .grid p {
+  font-size: 18px;
+  color: var(--gray-one);
 }
