--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -26,6 +26,52 @@
   grid-template-columns: repeat(3, 1fr);
 }
 
+/* Backround-colors & colored buttons */
+.bg-primary,
+.btn-primary {
+  background-color: var(--primary-color);
+  color: #FFF;
+}
+
+.bg-secondary,
+.btn-secondary {
+  background-color: var(--secondary-color);
+  color: var(--ghost-color);
+}
+
+.bg-dark,
+.btn-dark {
+  background-color: #505d69;
+  color: var(--ghost-color);
+}
+
+.bg-light,
+.btn-light {
+  background-color: var(--light-color);
+  color: var(--gray-one);
+}
+
+/* Text Sizes */
+.lead {
+  font-size: 20px;
+}
+
+.sm {
+  font-size: 1rem;
+}
+
+.md {
+  font-size: 2rem;
+}
+
+.lg {
+  font-size: 3rem;
+}
+
+.xl {
+  font-size: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
