--- a/styles/global.css
+++ b/styles/global.css
@@ -422,3 +422,53 @@ img {
     width: 70%;
   }
 }
+
+/*Services*/
+
+.features-head {
+  height: 400px;
+  background-color: var(--primary-color);
+  color: var(--light-color);
+  position: relative;
+}
+
+.features-head .grid {
+  overflow: visible;
+  grid-template-columns: 55% 45%;
+  gap: 30px;
+}
+
+.title-portifolio {
+  font-weight: 400;
+  font-size: 2.6rem;
+}
+
+
+.image-server img{
+  width: 32rem;
+}
+
+.features-main .card  h2{
+  margin-left: 20px;
+}
+
+.features-main .grid {
+  padding: 30px;
+}
+
+.features-main .grid > *:first-child{
+  grid-column: 1 / span 3;
+
+}
+
+.features-main .grid > *:nth-child(2){
+  grid-column: 1 / span 2;
+}
+
+.features-main .grid > *:nth-child(2) h2{
+  max-width: 400px;
+}
+
+.features-main .grid > *:first-child h2 {
+  max-width: 600px;
+}
