--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
 
 :root {
-  --primary-color: #047AED;
-  --secondary-color: #1C3FA8;
+  --primary-color: #047aed;
+  --secondary-color: #1c3fa8;
   --dark-color: #002240;
-  --light-color: #FBFBFF;
+  --light-color: #fbfbff;
   --gray-one: #333;
+  --success-color: #5cb85c;
+  --error-color: #d9534f;
 }
 
 * {
@@ -18,7 +20,6 @@ body {
   font-family: "Lato", sans-serif;
   color: var(--gray-one);
   line-height: 1.6;
-
 }
 
 a {
@@ -26,7 +27,12 @@ a {
   text-decoration: inherit;
 }
 
-h1, h2 {
+li {
+  list-style-type: none;
+}
+
+h1,
+h2 {
   font-weight: 300;
   line-height: 1.2;
   margin: 10px 0;
@@ -38,6 +44,14 @@ p {
 
 img {
   width: 100%;
+}
+
+code,
+pre {
+  border-radius: 3px;
+  background-color: #333;
+  color: #fbfbff;
+  padding: 10px;
 }
 
 /* Showcase section */
@@ -56,7 +70,7 @@ img {
 
 .showcase::before,
 .showcase::after {
-  content: '';
+  content: "";
   position: absolute;
   height: 100px;
   bottom: -70px;
@@ -87,7 +101,7 @@ img {
   border-radius: 10px;
   box-shadow: 3px 5px 0px 0px rgba(0, 0, 0, 0.2);
   color: var(--gray-one);
-  padding: 20px; 
+  padding: 20px;
   margin: 10px;
 }
 
@@ -105,14 +119,14 @@ img {
   margin: 1.6rem 0;
 }
 
-.showcase-form input[type="text"], 
+.showcase-form input[type="text"],
 .showcase-form input[type="email"] {
   border: 0;
-  border-bottom: 0.1rem solid #B4BECB;
+  border-bottom: 0.1rem solid #b4becb;
   width: 100%;
   padding: 3px;
-  font-size: 1rem;  
-} 
+  font-size: 1rem;
+}
 
 .btn {
   display: inline-block;
@@ -128,7 +142,7 @@ img {
   transform: scale(1.1);
 }
 
-.btn-outline {  
+.btn-outline {
   background-color: transparent;
   border: 1px solid var(--light-color);
 }
@@ -144,7 +158,7 @@ img {
 /* Stats */
 .stats {
   padding-top: 100px;
-  background-color:  var(--light-color);
+  background-color: var(--light-color);
 }
 
 .stats-heading {
@@ -163,17 +177,17 @@ img {
   color: var(--gray-one);
 }
 
-/* cloud */
+/* My Portifolio */
 
-.cloud {
+.my-portifolio {
   height: 325px;
 }
 
-.cloud .grid{
+.my-portifolio .grid {
   grid-template-columns: 4fr 3fr;
 }
 
-.image-cloud {
+.image-laptop-mobile {
   width: 80%;
 }
 
@@ -181,7 +195,7 @@ img {
 
 .techs .flex {
   flex-wrap: wrap;
-} 
+}
 
 .techs {
   text-align: center;
@@ -232,7 +246,9 @@ img {
   .grid,
   .showcase .grid,
   .stats .grid,
-  .cloud .grid {
+  .cloud .grid,
+  .portifolio-head .grid,
+  .services .grid {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
   }
@@ -302,14 +318,14 @@ img {
 
 /*Services*/
 
-.features-head {
+.services-head {
   height: 400px;
   background-color: var(--primary-color);
   color: var(--light-color);
   position: relative;
 }
 
-.features-head .grid {
+.services-head .grid {
   overflow: visible;
   grid-template-columns: 55% 45%;
   gap: 30px;
@@ -320,32 +336,124 @@ img {
   font-size: 2.6rem;
 }
 
-
-.image-server img{
+.image-server img {
   width: 32rem;
 }
 
-.features-main .card  h2{
+.services-main .card h2 {
   margin-left: 20px;
 }
 
-.features-main .grid {
+.services-main .grid {
   padding: 30px;
 }
 
-.features-main .grid > *:first-child{
+.services-main .grid > *:first-child {
   grid-column: 1 / span 3;
-
 }
 
-.features-main .grid > *:nth-child(2){
+.services-main .grid > *:nth-child(2) {
   grid-column: 1 / span 2;
 }
 
-.features-main .grid > *:nth-child(2) h2{
+.services-main .grid > *:nth-child(2) h2 {
   max-width: 400px;
 }
 
-.features-main .grid > *:first-child h2 {
+.services-main .grid > *:first-child h2 {
   max-width: 600px;
+}
+
+/*Portifolio*/
+
+.portifolio-head {
+  height: 25rem;
+}
+
+.image-portifolio img {
+  /*margin-top: -7rem;
+  position: absolute; */
+  margin-left: 6rem;
+  width: 25rem;
+}
+
+.portifolio-main .grid {
+  grid-template-columns: 2fr 1fr;
+  align-items: flex-start;
+}
+
+.portifolio-main nav li {
+  font-size: 1rem;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: 1px solid #d6d6d6;
+}
+
+/*alert*/
+.alert {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  margin: 15px 0;
+  border-radius: 0.3rem;
+  font-weight: bold;
+  background-color: var(--ligth-color);
+}
+
+.alert p {
+  font-size: 1rem;
+  margin-left: 1rem;
+}
+
+.alert-sucessfull {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  height: 2.4rem;
+  background-color: var(--error-color);
+  color: #fff;
+}
+
+.card.card-port h2 {
+  font-weight: bold;
+}
+
+.card.card-port ul li{
+  list-style-type: disc;
+}
+.card.card-port ul {
+  margin-left: 1rem;
+}
+.card.card-port pre {
+  margin-bottom: 1rem;
+}
+.card.card-port code {
+  display: flex;
+  max-width: 20rem;
+  flex-direction: column;
+}
+
+.card.card-port a {
+  margin-bottom: 1rem;
+  display: flex;
+  max-width: 17.5rem;
+}
+
+.card.card-port a span {
+  margin-left: 1rem;
+}
+
+.header-card-port img {
+  width: 30rem;
+  margin-left: 3.8rem;
+}
+
+.card.card-apps {
+  background-color: #f5f5f5;
+}
+
+.card.card-apps li {
+  margin-left: 1rem;
 }
